--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/transition.css">
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS, then Vue.js -->
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/vue.min.js"></script>
 
     <title>Price Calculator</title>
 
@@ -132,33 +130,6 @@
     }
 
     $(document).ready(function () {
-      var app1 = new Vue({
-        el: '#app-1',
-        data: {
-          message: ''
-        },
-        methods: {
-          updateCart: function () {
-            console.log("changed", this.message);
-          }
-        }
-      });
-
-      new Vue({
-        el: '#transition-components-demo',
-        data: {
-          view: 'v-a'
-        },
-        components: {
-          'v-a': {
-            template: "this is it"
-          },
-          'v-b': {
-            template: "calculator"
-          }
-        }
-      })
-
       var defaultPricingRule = {
         A: {price: 8,
             discount: "none"},
@@ -186,6 +157,12 @@
         $('#logMessage-div').attr("style", "display: none");
         $('#logMessage').html("");
         $("#logMessage").attr("style", "display: none");
+
+        $('#APolicy').val(defaultPricingRule['A']['discount']);
+        $('#BPolicy').val(defaultPricingRule['B']['discount']);
+        $('#CPolicy').val(defaultPricingRule['C']['discount']);
+        $('#DPolicy').val(defaultPricingRule['D']['discount']);
+        $('#EPolicy').val(defaultPricingRule['E']['discount']);
       });
 
       $("#updateInfo").click(function (){
@@ -298,10 +275,6 @@
         $(".ECount").val(statics['E']);
       });
 
-      $('#myDropdown').on('show.bs.dropdown', function () {
-        console.log("dropdown changed");
-      });
-
       $('#makeChanges').click(function(){
         defaultPricingRule['A']['price'] = $('#APrice').val();
         defaultPricingRule['B']['price'] = $('#BPrice').val();
@@ -320,6 +293,12 @@
         $('#CPriceTag').html("£" + Number($('#CPrice').val()).toFixed(2));
         $('#DPriceTag').html("£" + Number($('#DPrice').val()).toFixed(2));
         $('#EPriceTag').html("£" + Number($('#EPrice').val()).toFixed(2));
+
+        defaultPricingRule['A']['discount'] = $('#APolicy').val();
+        defaultPricingRule['B']['discount'] = $('#BPolicy').val();
+        defaultPricingRule['C']['discount'] = $('#CPolicy').val();
+        defaultPricingRule['D']['discount'] = $('#DPolicy').val();
+        defaultPricingRule['E']['discount'] = $('#EPolicy').val();
 
         $('.ACount').val('0');
         $('.BCount').val('0');
@@ -400,8 +379,7 @@
                 <div class="col-xs-12" style="height:3em;"></div>
                 <div class="row">
                   <div class="col" id="app-1">
-                    <input id="cart" type="text" class="form-control" v-model="message" v-on:change="updateCart" style="width: 100%;">
-                    <p>{{ message }}</p>
+                    <input id="cart" type="text" class="form-control" style="width: 100%;">
                   </div>
                   <div class="col">
                     <button id="updateInfo" class="btn btn-default">Get price</button></div>
@@ -450,17 +428,7 @@
                 <input id="APrice" type="number" value="8.00" min="0.00" style="width: 90%; text-align: center; font-size: 20px">
               </div>
               <div class="col-8">
-                <div class="btn-group" id="myDropdown">
-                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
-                    None
-                  </button>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">None</a>
-                    <a class="dropdown-item" href="#">x for £..</a>
-                    <a class="dropdown-item" href="#">Buy x get y free</a>
-                    <a class="dropdown-item" href="#">x for the price of y</a>
-                  </div>
-                </div>
+                <input id="APolicy" type="text" style="width: 60%; text-align: left; font-size: 20px">
               </div>
             </div>
             <div class="col-xs-12" style="height:1em;"></div>
@@ -473,17 +441,7 @@
                 <input id="BPrice" type="number" value="12.00" min="0.00" style="width: 90%; text-align: center; font-size: 20px">
               </div>
               <div class="col-8">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
-                    x for £..
-                  </button>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">None</a>
-                    <a class="dropdown-item" href="#">x for £..</a>
-                    <a class="dropdown-item" href="#">Buy x get y free</a>
-                    <a class="dropdown-item" href="#">x for the price of y</a>
-                  </div>
-                </div>
+                <input id="BPolicy" type="text" style="width: 60%; text-align: left; font-size: 20px">
               </div>
             </div>
             <div class="col-xs-12" style="height:1em;"></div>
@@ -496,17 +454,7 @@
                 <input id="CPrice" type="number" value="4.00" min="0.00" style="width: 90%; text-align: center; font-size: 20px">
               </div>
               <div class="col-8">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
-                    x for £..
-                  </button>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">None</a>
-                    <a class="dropdown-item" href="#">x for £..</a>
-                    <a class="dropdown-item" href="#">Buy x get y free</a>
-                    <a class="dropdown-item" href="#">x for the price of y</a>
-                  </div>
-                </div>
+                <input id="CPolicy" type="text" style="width: 60%; text-align: left; font-size: 20px">
               </div>
             </div>
             <div class="col-xs-12" style="height:1em;"></div>
@@ -519,17 +467,7 @@
                 <input id="DPrice" type="number" value="7.00" min="0.00" style="width: 90%; text-align: center; font-size: 20px">
               </div>
               <div class="col-8">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
-                    Buy x get y free
-                  </button>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">None</a>
-                    <a class="dropdown-item" href="#">x for £..</a>
-                    <a class="dropdown-item" href="#">Buy x get y free</a>
-                    <a class="dropdown-item" href="#">x for the price of y</a>
-                  </div>
-                </div>
+                <input id="DPolicy" type="text" style="width: 60%; text-align: left; font-size: 20px">
               </div>
             </div>
             <div class="col-xs-12" style="height:1em;"></div>
@@ -542,26 +480,14 @@
                 <input id="EPrice" type="number" value="5.00" min="0.00" style="width: 90%; text-align: center; font-size: 20px">
               </div>
               <div class="col-8">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="vertical-align: middle">
-                    x for the price of y
-                  </button>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">None</a>
-                    <a class="dropdown-item" href="#">x for £..</a>
-                    <a class="dropdown-item" href="#">Buy x get y free</a>
-                    <a class="dropdown-item" href="#">x for the price of y</a>
-                  </div>
-                </div>
+                <input id="EPolicy" type="text" style="width: 60%; text-align: left; font-size: 20px">
               </div>
             </div>
             <div class="col-xs-12" style="height:3em;"></div>
 
             <div class="row">
               <div class="col-4">
-                <div id='logMessage-div' class="alert alert-success" style="display: none;
-
-                ">
+                <div id='logMessage-div' class="alert alert-success" style="display: none;">
                   <strong id='logMessage' style="display: none"></strong>
                 </div>
               </div>
@@ -573,19 +499,6 @@
           </div>
         </div>
       </div>
-      <div id="transition-components-demo">
-
-      <input type="radio" id="one" value="v-a" v-model="view">
-      <label for="one">One</label>
-      <br>
-      <input type="radio" id="two" value="v-b" v-model="view">
-      <label for="two">Two</label>
-
-      <transition name="component-fade" mode="out-in">
-        <component v-bind:is="view"></component>
-      </transition>
-
-    </div>
     </div>
   </body>
 </html>
